<resources>
    <string name="app_name">Patient activity</string>
    <string name="action_settings">Settings</string>

    <!-- Activity detection strings -->
    <string name="in_vehicle">In a vehicle </string>
    <string name="on_bicycle">On a bicycle </string>
    <string name="on_foot">On foot </string>
    <string name="running">Running </string>
    <string name="still">Still </string>
    <string name="tilting">Tilting </string>
    <string name="unknown">Unknown activity </string>
    <string name="walking">Walking </string>
    <string name="unidentifiable_activity">Unidentifiable activity: %1$d</string>

    <string name="detected_activities_title">Detected activities</string>
    <string name="activity_index_title">Total activity index</string>

    <string name="request_activity_updates">Start count</string>
    <string name="remove_activity_updates">Stop count</string>
    <string name="activity_updates_added">Activity updates added</string>
    <string name="activity_updates_removed">Activity updates removed</string>

    <string name="not_connected">GoogleApiClient not yet connected. Try again.</string>
    <string name="current_activity_is_abscent">Nothing to show. Try turn on monitor.</string>
    <string name="activity_bad">bad</string>
    <string name="activity_good">good</string>
</resources>
